# se-toolkit-hackathon

./: .dockerignore  .env_template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  generate_presentation.py  pyproject.toml
app/: main.py  test_instance.py
app/core/: config.py  utils.py  worker.py
app/core/database/: setup_db.py
app/core/managers/: connection_manager.py  redis_manager.py
app/migration/: env.py
app/migration/versions/: 2ce91103e5cd_initial_revision.py  3883a20934a1_added_field_to_service_model.py
app/models/: service.py  user.py
app/routers/: monitor.py  users.py
app/schemas/: services.py
app/static/: index.css  index.html  main.js
sources/: presentation.pptx
